# io_scene_dalbaragi

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  __init__.py  blender_manifest.toml  blender_parser.py  byteutils.py  data_exporter.py  data_struct.py  datastruct.py  export_func.py  fixed_num.py  map_data.py  map_exporter_lvl.py  mesh_manager.py  model_exporter.py  modify_data.py  rawdata.py  smalltype.py
cpp/: CMakeLists.txt  b3dsung.cpp  dal_byte_tool.cpp  dal_byte_tool.h  dal_model_exporter.cpp  dal_model_exporter.h  dal_model_parser.cpp  dal_model_parser.h  dal_modifier.cpp  dal_modifier.h  dal_struct.cpp  dal_struct.h  include_python.h  konst.h  mesh_manager.cpp  mesh_manager.h
cpp/app/: CMakeLists.txt  main.cpp
cpp/test/: honoka_basic_3.dmd  irin.dmd  irin_indexed.dmd  sphere.dmd  test_1.cpp
